syntax = "proto3";

package NUgc.NSchema.NOrgs;

import "kernel/ugc/proto/common/reaction.proto";
import "google/protobuf/timestamp.proto";

// Next 8
message TBusinessAnswer {
    // ReviewId of original review
    string ReviewId = 1;

    // Analog FeedbackId for this answer
    string AnswerId = 2;

    // Comment data
    string Text = 3;
    google.protobuf.Timestamp TextTime = 4;

    // Hideen fields
    bool Hidden = 5;
    string HiddenReason = 6;

    // User identifier of business answer author
    string UserId = 7 [deprecated = true];
}

// view
message TBusinessComment {
    string CommentId = 1;
    google.protobuf.Timestamp UpdatedTime = 2;

    string Text = 3;
    string Snippet = 4;

    // robot content, aggregation in offline
    uint32 LikeCount = 5;
    uint32 DislikeCount = 6;
    uint32 SkipCount = 8;

    // user reaction on this comment
    TReviewReaction.EType UserReaction = 7;
}
